src/css/styles.css
/* Global variables. */
:root {
  /* Set sans-serif & mono fonts */
  --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
    "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica,
    "Helvetica Neue", sans-serif;
  --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;

  /* Default (light) theme */
  /* --dark: #212121; */
  --dark: black;
  --accent-bg: #2b2b2b;
  --light: #dcdcdc;
  --light-light: #fff;
  --border: #666;
  --accent: #ff4c5b;
  --inverse: #000;
}

* {
  box-sizing: border-box;
}

html {
  /* Set the font globally */
  font-family: var(--sans-font);
  scroll-behavior: smooth;
}

body {
  color: var(--light);
  background: var(--dark);
}

.centered-text {
  text-align: center;
}

.flex-snap-to-bottom {
  align-self: flex-end;
}

.index-wrapper {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  padding: 0 50px 0 50px;
}

.index-header {
  display: flex;
  flex-direction: column;
  gap: 16px;
  color: var(--dark);
  min-width: 500px;
  width: 500px;
  background-color: var(--light-light);
  padding: 16px;
  margin: 50px 32px 50px 0;
  border-radius: 16px;
  /* max-height: calc(100vh - 100px); */
  max-height: min-content;
  height: min-content;
  position: sticky;
  top: 50px;
}

.index-header-top {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.index-header-avatar {
  height: 240px;
  width: 240px;
  margin-left: -50px;
  margin-top: -50px;
}

.index-header-title {
  width: 100%;
  max-height: 190px;
}

.index-header-contents {
  max-height: min-content;
}

.index-profile-pic-wrapper {
  width: 100%;
  height: 100%;
  z-index: 1;
  padding: 16px;
  background-color: var(--dark);
  border: 4px solid var(--dark);
  border-radius: 116px;
  align-self: center;
  /* justify-self: center; */
  /* box-sizing: border-box; */
}

/* Make the main a nice central block */
.index-bloglist {
  font-size: 1.15rem;
  line-height: 1.5;
  max-width: 1000px;
  padding: 0 32px 0 32px;
  margin: 50px 0 50px 0;
}

.index-vertical-rule {
  max-height: calc(100vh - 100px);
  position: sticky;
  top: 50px;
  background-color: var(--light-light);
  min-width: 3px;
}

@media all and (max-width: 1200px) {
  .index-wrapper {
    flex-direction: column;
  }

  .index-header {
    width: 100%;
    position: static;
  }

  .index-bloglist {
    margin: 0;
    padding: 0;
  }

  .index-vertical-rule {
    display: none;
  }
}

/* Format navigation */
nav {
  border-bottom: 1px solid var(--border);
  font-size: 1rem;
  line-height: 2;
  padding: 1rem 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-bottom: 2rem;
}

nav a {
  margin: 1rem 1rem 0 0;
  color: var(--light) !important;
  padding: 0.1rem 1rem;
}

nav a:hover {
  color: var(--accent) !important;
}

nav a:last-child {
  margin-right: 0;
}

/* Reduce nav side on mobile */
@media only screen and (max-width: 750px) {
  nav a {
    border: none;
    padding: 0;
    color: var(--accent);
    text-decoration: underline;
    line-height: 1;
  }
}

/* Add a little padding to ensure spacing is correct between content and nav */
main {
  padding-top: 1.5rem;
  margin: 0 auto;
  max-width: 1000px;
}

main > footer {
  margin-top: 4rem;
  padding: 2rem 1rem 1.5rem 1rem;
  color: var(--light-light);
  font-size: 0.9rem;
  text-align: center;
  border-top: 1px solid var(--border);
}

/* Format headers */

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2.6rem;
  margin-top: 3rem;
}

/* Reduce header size on mobile */
@media only screen and (max-width: 720px) {
  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 2.1rem;
  }
}

/* Format links */
a,
a:visited {
  color: var(--accent);
  text-decoration: none;
}

.homepage-post,
.homepage-post:visited {
  display: block;
  background-color: var(--light-light);
  color: var(--dark);
  margin-bottom: 16px;
}
.homepage-post-content {
  padding: 0 16px 16px 16px;
}

.homepage-post-header-text {
  margin-top: 4px;
  margin-bottom: 4px;
  border-bottom: 7px solid var(--dark);
}

.homepage-post-content-text {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.tag-strip {
  margin-top: 16px;
  margin-bottom: 16px;
}

.blog-header-text {
  margin-top: 0;
  border-bottom: 7px solid var(--light);
  line-height: 1.05;
  padding-bottom: 8px;
  max-width: 800px;
}

.header-image {
  width: 100%;
  height: 250px;
  object-fit: cover;
}

.tag-span {
  background-color: var(--light-light);
  border-radius: 4px;
  color: var(--dark);
  display: inline-block;
  font-style: italic;
  font-weight: bold;
  margin-right: 8px;
  min-width: 100px;
  padding: 2px;
  text-align: center;
}

.tag-red {
  background-color: var(--accent);
  color: var(--light-light);
}

.tag-grey {
  background-color: var(--light);
}

.tag-inverse {
  color: var(--light-light);
  background-color: var(--inverse);
}

.home-button {
  position: sticky;
  left: 16px;
  bottom: 16px;
}

.about-profile-pic {
  width: 200px;
  height: 200px;
  margin: 16px;
  border: 4px solid var(--dark);
  outline: 16px solid var(--light-light);
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 24px;
  margin-right: 24px;
  border-radius: 100px;
  /* box-sizing: border-box; */
  z-index: 1;
}

.about-profile-pic-wrapper {
  width: 100%;
  height: 100%;
  z-index: 1;
  padding: 16px;
  background-color: var(--dark);
  border: 4px solid var(--dark);
  border-radius: 116px;
  align-self: center;
  /* justify-self: center; */
  /* box-sizing: border-box; */
}

.about-body {
  display: grid;
  grid-template-columns: 240px auto;
  grid-template-rows: 240px auto;
  margin-top: 50px;
  margin-left: 50px;
}

.about-title-box {
  display: flex;
  align-items: center;
  align-self: center;
  margin-left: -44px;
  height: 120px;
  background-color: var(--light);
  width: 350px;
  border-top-right-radius: 70px;
  border-bottom-right-radius: 70px;
}

.about-title {
  color: var(--dark);
  font-size: 48px;
  font-weight: bolder;
  /* this sucks but it also works so whatever */
  text-align: right;
  width: 100%;
  padding-right: 60px;
}

.about-three-bars {
  width: 100px;
  justify-self: center;
  margin-top: -44px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.bar-one,
.bar-two,
.bar-three {
  background-color: var(--light);
  width: 20px;
  border-bottom-left-radius: 14px;
  border-bottom-right-radius: 14px;
}

.bar-one {
  height: 160px;
}

.bar-two {
  height: 210px;
}

.bar-three {
  height: 260px;
}

.about-content {
  margin-top: -30px;
  margin-left: -30px;
  width: 350px;
  font-size: 24px;
}

.about-content p:first-of-type {
  margin-top: 0;
}

